oop_mro/tests/trybuild/fail_abstract_default.stderr
error[E0277]: abstract classes must not implement Default
  --> tests/trybuild/fail_abstract_default.rs:19:23
   |
19 |     require_default::<StillAbstract>();
   |                       ^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `Default` is not implemented for `StillAbstract`
  --> tests/trybuild/fail_abstract_default.rs:3:1
   |
 3 | / oop_class! {
 4 | |     abstract class AbstractShape {
 5 | |         abstract virtual fn area(&self) -> usize;
...  |
 8 | |     abstract class StillAbstract: AbstractShape {}
   | |________________________________^
note: required for `StillAbstract` to implement `MustBeDefault`
  --> tests/trybuild/fail_abstract_default.rs:14:18
   |
14 | impl<T: Default> MustBeDefault for T {}
   |         -------  ^^^^^^^^^^^^^     ^
   |         |
   |         unsatisfied trait bound introduced here
note: required by a bound in `require_default`
  --> tests/trybuild/fail_abstract_default.rs:16:23
   |
16 | fn require_default<T: MustBeDefault>() {}
   |                       ^^^^^^^^^^^^^ required by this bound in `require_default`
   = note: this error originates in the macro `oop_class` (in Nightly builds, run with -Z macro-backtrace for more info)
